fix(overlay): set body overflow hidden on modal open (#79)
* fix: body overflow hidden on modal open

* fix: update code according to review

* fix

--- a/packages/mikado_reborn/src/components/Modal/Modal.scss
+++ b/packages/mikado_reborn/src/components/Modal/Modal.scss
@@ -3,7 +3,7 @@
 .mkr__modal {
   $modal: &;
   display: none;
-  position: absolute;
+  position: fixed;
   left: 50vw;
   top: 50vh;
   z-index: 1500;
